--- a/task02/pom.xml
+++ b/task02/pom.xml
@@ -19,11 +19,11 @@
     </properties>
 
     <dependencies>
-        <!--AWS dependencies-->
+        <!-- AWS dependencies-->
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-core</artifactId>
-            <version>1.2.3</version>
+            <version>1.2.0</version>
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
@@ -36,16 +36,18 @@
             <artifactId>deployment-configuration-annotations</artifactId>
             <version>${syndicate.java.plugin.version}</version>
         </dependency>
+
+
         <!--Custom dependencies (for sdk layer)-->
         <dependency>
-            <groupId>task02.custom.sdk</groupId>
+            <groupId>task02</groupId>
             <artifactId>commons-lang3-downloaded-library</artifactId>
             <version>3.14.0</version>
             <scope>system</scope>
             <systemPath>${basedir}/lib/commons-lang3-3.14.0.jar</systemPath>
         </dependency>
         <dependency>
-            <groupId>task02.custom.sdk</groupId>
+            <groupId>task02</groupId>
             <artifactId>gson-downloaded-library</artifactId>
             <version>2.10.1</version>
             <scope>system</scope>
@@ -59,7 +61,7 @@
             <resource>
                 <directory>${resources.dir}</directory>
             </resource>
-        </resources>
+        </resources>        
         <plugins>
             <plugin>
                 <groupId>net.sf.aws-syndicate</groupId>
@@ -67,7 +69,7 @@
                 <version>${syndicate.java.plugin.version}</version>
                 <configuration>
                     <packages>
-                        <package>com.task02layerurl</package>
+                        <package>com.task02</package>
                     </packages>
                     <fileName>${project.name}-${project.version}.jar</fileName>
                 </configuration>
