--- a/task08/pom.xml
+++ b/task08/pom.xml
@@ -55,6 +55,7 @@
             <groupId>com.openmeteo.sdk</groupId>
             <artifactId>open-meteo-sdk</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <systemPath>${basedir}/lib/open-meteo-sdk:jar:1.0-SNAPSHOT</systemPath>
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
