--- a/task08/pom.xml
+++ b/task08/pom.xml
@@ -56,7 +56,7 @@
             <artifactId>open-meteo-sdk</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>${basedir}/lib/open-meteo-sdk:jar:1.0-SNAPSHOT</systemPath>
+            <systemPath>${basedir}/lib/open-meteo-sdk-1.0-SNAPSHOT.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
