--- a/task09/pom.xml
+++ b/task09/pom.xml
@@ -97,7 +97,11 @@
             <artifactId>aws-xray-recorder-sdk-core</artifactId>
             <version>2.11.0</version> <!-- use the latest version -->
         </dependency>
-
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-dynamodb</artifactId>
+            <version>1.12.118</version> <!-- Use the latest available version -->
+        </dependency>
     </dependencies>
 
     <build>
