--- a/task09/pom.xml
+++ b/task09/pom.xml
@@ -102,6 +102,11 @@
             <artifactId>aws-java-sdk-dynamodb</artifactId>
             <version>1.12.118</version> <!-- Use the latest available version -->
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.3</version>
+        </dependency>
     </dependencies>
 
     <build>
