--- a/task10/pom.xml
+++ b/task10/pom.xml
@@ -86,7 +86,7 @@
                 <version>${syndicate.java.plugin.version}</version>
                 <configuration>
                     <packages>
-                        <package>com.demoapigatewaycognito</package>
+                        <package>com.task10</package>
                     </packages>
                     <fileName>${project.name}-${project.version}.jar</fileName>
                 </configuration>
