--- a/task10/pom.xml
+++ b/task10/pom.xml
@@ -89,6 +89,12 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-xray-recorder-sdk-core</artifactId>
+            <version>2.11.0</version> <!-- use the latest version -->
+        </dependency>
+
 
 
         <!-- JSON dependencies -->
